# file-format

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: lefi.rs
examples/lefi/: Cargo.toml
examples/lefi/src/: main.rs
fixtures/application/: sample-no-xml.abw  sample-no-xml.amf  sample-no-xml.awt  sample-no-xml.gml  sample-no-xml.kml  sample-no-xml.tcx  sample-no-xml.xlf  sample-no-xml.xsl  sample.7z  sample.Z  sample.a78  sample.abw  sample.accdb  sample.ai  sample.amf  sample.ani  sample.apk  sample.ar  sample.arrow  sample.arsc  sample.bc  sample.bz2  sample.cab  sample.cda  sample.cddx  sample.chm  sample.crt  sample.csr  sample.dcm  sample.deb  sample.dex  sample.dey  sample.dmg  sample.docx  sample.drawio  sample.dwfx  sample.ear  sample.elf  sample.eot  sample.epub  (+83 more)
fixtures/archive/: sample.ace  sample.alz  sample.arj  sample.cpio  sample.lzh  sample.mar  sample.mla  sample.sbx  sample.sit  sample.sitx  sample.sqsh  sample.wim  sample.xar  sample.zoo  sample.zpaq
fixtures/audio/: sample.8svx  sample.aac  sample.ac3  sample.aif  sample.aiff  sample.amr  sample.ape  sample.au  sample.avr  sample.dsf  sample.f4a  sample.f4b  sample.flac  sample.it  sample.m4a  sample.m4b  sample.m4p  sample.mid  sample.mka  sample.mod  sample.mp2  sample.mpc  sample.oga  sample.opus  sample.qcp  sample.qoa  sample.s3m  sample.sf2  sample.spx  sample.voc  sample.wma  sample.wv  sample.xm  sample1.flac  sample1.ra  sample2.flac  sample2.ra
fixtures/book/: sample.epub  sample.mobi  sample1.fb2  sample2.fb2
fixtures/certificate/: sample.der
fixtures/compressed/: sample.bz  sample.bz3  sample.lz4  sample.lzma  sample.rz
fixtures/compression/: sample.lz  sample.lzfse
fixtures/database/: sample.mdb  sample.odb  sample.sqlite  sample1.wdb  sample2.wdb
fixtures/diagram/: sample.vsd
fixtures/disk/: sample.iso  sample.qcow  sample.vhdx  sample.vmdk
fixtures/document/: sample.djvu  sample.doc  sample.idml  sample.indd  sample.odg  sample.odm  sample.odt  sample.otg  sample.otm  sample.ots  sample.ott  sample.pub  sample.rtf  sample.sda  sample.sdc  sample.sds  sample.sdw  sample.sgw  sample.smf  sample.stc  sample.std  sample.sti  sample.stw  sample.sxc  sample.sxd  sample.sxi  sample.sxm  sample.sxw  sample.uot  sample.vsdx  sample.wri  sample.xps  sample1.wpd  sample1.wps  sample2.awt  sample2.drawio  sample2.wpd  sample2.wpg  sample2.wps
fixtures/ebook/: sample.fbz  sample.lit
fixtures/executable/: sample.bc  sample.coff  sample.dey  sample.elf  sample.mach  sample.prg  sample.xbe  sample.xex
fixtures/font/: sample.eot  sample.flf  sample.glyphs  sample.ttc  sample1.fnt  sample2.fnt
fixtures/formula/: sample.odf  sample.sxm
fixtures/geospatial/: sample.shp  sample1.gpx  sample2.gpx  sample2.kml
fixtures/image/: sample.2.heic  sample.3.heic  sample.ai  sample.apng  sample.astc  sample.avif  sample.avifs  sample.bpg  sample.cin  sample.cr2  sample.cr3  sample.crw  sample.cur  sample.dds  sample.djvu  sample.dpx  sample.eps  sample.exr  sample.ff  sample.fig  sample.fits  sample.flif  sample.hdr  sample.heic  sample.heifs  sample.icns  sample.j2c  sample.jls  sample.jng  sample.jp2  sample.jpm  sample.jpx  sample.jxl  sample.jxr  sample.ktx  sample.ktx2  sample.miff  sample.nef  sample.ora  sample.orf  (+18 more)
fixtures/metadata/: sample.alias  sample.id3  sample.lnk  sample.xml
fixtures/model/: sample-ascii.stl  sample-no-xml.x3d  sample.123dx  sample.3dm  sample.3ds  sample.3mf  sample.a3d  sample.blend  sample.dae  sample.drc  sample.dwf  sample.dwfx  sample.dwg  sample.f3d  sample.glb  sample.iam  sample.idw  sample.iges  sample.ipn  sample.ipt  sample.iqe  sample.iqm  sample.m3d  sample.max  sample.mb  sample.scdoc  sample.skp  sample.sldasm  sample.slddrw  sample.sldprt  (+10 more)
src/: binary.rs  extension.rs  formats.rs  lib.rs  macros.rs  media_type.rs  read.rs  readers.rs  signatures.rs  utils.rs
tests/: application.rs  archive.rs  audio.rs  book.rs  certificate.rs  compressed.rs  compression.rs  database.rs  diagram.rs  disk.rs  document.rs  ebook.rs  executable.rs  font.rs  formula.rs  geospatial.rs  image.rs  mathematical.rs  media-to-kind.rs  metadata.rs  model.rs  other.rs  package.rs  playlist.rs  presentation.rs  rom.rs  spreadsheet.rs  subtitle.rs  syndication.rs  test_from_extension.rs  test_from_media_type.rs  text.rs  video.rs
(+159 files in other folders)
