[package]
name = "file-format"
version = "0.28.0"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2024"
description = "Crate for determining the file format of a given file or stream."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["file-format", "file-type", "magic-number", "media-type", "mime"]
categories = ["filesystem"]
homepage = "https://github.com/mmalecot/file-format"
repository = "https://github.com/mmalecot/file-format"
documentation = "https://docs.rs/file-format"
exclude = ["/.github", "/examples", "/fixtures", "/tests", ".gitattributes", ".gitignore"]
rust-version = "1.85.0"

[features]
## Reader features
reader = [
    "reader-asf",
    "reader-cfb",
    "reader-ebml",
    "reader-exe",
    "reader-id3v2",
    "reader-mp4",
    "reader-pdf",
    "reader-rm",
    "reader-sqlite3",
    "reader-txt",
    "reader-xml",
    "reader-zip"
]
reader-asf = []
reader-cfb = []
reader-ebml = []
reader-exe = []
reader-id3v2 = []
reader-mp4 = []
reader-pdf = []
reader-rm = []
reader-sqlite3 = []
reader-txt = []
reader-xml = []
reader-zip = []
