[package]
name = "lefi"
version = "0.1.0"
authors = ["Mickaël Malécot <mickael.malecot@gmail.com>"]
edition = "2021"
description = "Simplified version of the UNIX file command."

[profile.release]
lto = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = { version = "2.0" }
file-format = { path = "../..", features = ["zip"] }
